user crud controller and db mods
